--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,13 +11,19 @@
     <Grid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Button x:Name="addVideoButton" Click="addVideoButton_Click">Add video</Button>
-            <TextBox PlaceholderText="Start timestamp (HH:MM:SS)" x:Name="startTimestampText" TextChanged="startTimestampText_TextChanged" />
-            <TextBox PlaceholderText="End timestamp (HH:MM:SS)" x:Name="endTimestampText" TextChanged="endTimestampText_TextChanged"/>
+            <StackPanel Width="200">
+                <TextBox PlaceholderText="Start timestamp (HH:MM:SS)" x:Name="startTimestampText" TextChanged="startTimestampText_TextChanged" />
+                <TextBlock x:Name="startTimestampErrorLabel" Foreground="Red" TextAlignment="Center" />
+            </StackPanel>
+            <StackPanel Width="200">
+                <TextBox PlaceholderText="End timestamp (HH:MM:SS)" x:Name="endTimestampText" TextChanged="endTimestampText_TextChanged" />
+                <TextBlock x:Name="endTimestampErrorLabel" Foreground="Red" TextAlignment="Center" />
+            </StackPanel>
             <Button x:Name="processVideoButton" Click="processVideoButton_Click" IsEnabled="False">Clip</Button>
         </StackPanel>
         <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center" MaxWidth="600">
             <TextBlock x:Name="originalVideoLabel" />
-            <MediaPlayerElement x:Name="originalVideoMediaPlayer" AutoPlay="False" MaxHeight="400" MaxWidth="600"/>
+            <MediaPlayerElement x:Name="originalVideoMediaPlayer" AutoPlay="False" MaxHeight="400" MaxWidth="600" />
             <TextBlock x:Name="originalFileName" FontWeight="SemiBold"/>
             <TextBlock x:Name="originalFilePath" TextWrapping="Wrap" />
         </StackPanel>
